--- a/microservice-one.properties
+++ b/microservice-one.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test_db
+spring.datasource.url=jdbc:mysql://172.17.0.2:33060/test_db
 spring.datasource.username=root
 spring.datasource.password=12345
