--- a/microservice-one.properties
+++ b/microservice-one.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://172.17.0.2:33060/test_db
 spring.datasource.username=root
